static pages complete

--- a/.htaccess
+++ b/.htaccess
@@ -197,7 +197,73 @@ DirectoryIndex index.php index.html index.htm
     RewriteCond %{REQUEST_URI} !/petrol [NC]    
     RewriteCond %{REQUEST_URI} !/gudiyas.jsp [NC]
     RewriteCond %{REQUEST_URI} !/frames [NC]  
-
+	####### start saticpages phase 2 #########
+	RewriteCond %{REQUEST_URI} !/aap-arvind-kejriwal-winning-celebration [NC]  
+	RewriteCond %{REQUEST_URI} !/aishwaryarai [NC]  
+	RewriteCond %{REQUEST_URI} !/amitabh-bachchan-70th-birthday [NC]  
+	RewriteCond %{REQUEST_URI} !/amitabh-bachchan-72nd-birthday [NC]  
+	RewriteCond %{REQUEST_URI} !/andhra [NC]  
+	RewriteCond %{REQUEST_URI} !/anna [NC]  
+	RewriteCond %{REQUEST_URI} !/asiad2014 [NC]  
+	RewriteCond %{REQUEST_URI} !/atoz-election [NC]  
+	RewriteCond %{REQUEST_URI} !/autoexpo/2016 [NC]  
+	RewriteCond %{REQUEST_URI} !/autoexpo/2014 [NC]  
+	RewriteCond %{REQUEST_URI} !/bob [NC]  
+	RewriteCond %{REQUEST_URI} !/boi [NC]  
+	RewriteCond %{REQUEST_URI} !/cannes2012 [NC]  
+	RewriteCond %{REQUEST_URI} !/cannes2013 [NC]  
+	RewriteCond %{REQUEST_URI} !/cards [NC]  
+	RewriteCond %{REQUEST_URI} !/cricket-fest-6 [NC]  
+	RewriteCond %{REQUEST_URI} !/educationconclave2015 [NC]  
+	RewriteCond %{REQUEST_URI} !/educationsummit [NC]  
+	RewriteCond %{REQUEST_URI} !/election-express [NC]  
+	RewriteCond %{REQUEST_URI} !/fashionweek [NC]  
+	RewriteCond %{REQUEST_URI} !/five-tax-sins [NC]  
+	RewriteCond %{REQUEST_URI} !/food-bill [NC]  
+	RewriteCond %{REQUEST_URI} !/friends [NC]  
+	RewriteCond %{REQUEST_URI} !/global-roundtable-beijing [NC]  
+	RewriteCond %{REQUEST_URI} !/independence-inflation [NC]  
+	RewriteCond %{REQUEST_URI} !/indian-search [NC]  
+	RewriteCond %{REQUEST_URI} !/indiatodayatautoexpo [NC]  
+	RewriteCond %{REQUEST_URI} !/juvenile [NC]  
+	RewriteCond %{REQUEST_URI} !/juvenilerapist [NC]  
+	RewriteCond %{REQUEST_URI} !/kalamwillliveon [NC]  
+	RewriteCond %{REQUEST_URI} !/kejriwal [NC]  
+	RewriteCond %{REQUEST_URI} !/lie [NC]  
+	RewriteCond %{REQUEST_URI} !/london-olympics-2012 [NC]  
+	RewriteCond %{REQUEST_URI} !/manmohan-economy [NC]  
+	RewriteCond %{REQUEST_URI} !/masala-world-cup [NC]  
+	RewriteCond %{REQUEST_URI} !/mms-same [NC]  
+	RewriteCond %{REQUEST_URI} !/mms-speech [NC]  
+	RewriteCond %{REQUEST_URI} !/modi-navratnas [NC]  
+	RewriteCond %{REQUEST_URI} !/moily [NC]  
+	RewriteCond %{REQUEST_URI} !/monsoontracker [NC]  
+	RewriteCond %{REQUEST_URI} !/most-explosive-mamata-missiles [NC]  
+	RewriteCond %{REQUEST_URI} !/nokia [NC]  
+	RewriteCond %{REQUEST_URI} !/one-min-twictionary [NC]  
+	RewriteCond %{REQUEST_URI} !/oscar-winners [NC]  
+	RewriteCond %{REQUEST_URI} !/pledgewithCM [NC]  
+	RewriteCond %{REQUEST_URI} !/presidential-polls [NC]  
+	RewriteCond %{REQUEST_URI} !/psu [NC]  
+	RewriteCond %{REQUEST_URI} !/rajnikant [NC]  
+	RewriteCond %{REQUEST_URI} !/realestateawards [NC]
+	Redirect /realestateconclave /realestateawards
+	Redirect /tech /technology
+	Redirect /media-institute /itmi
+	RewriteCond %{REQUEST_URI} !/sachin-live-on-world-cup [NC]
+	RewriteCond %{REQUEST_URI} !/sachin-odi-gallery [NC]
+	RewriteCond %{REQUEST_URI} !/sachin2 [NC]
+	RewriteCond %{REQUEST_URI} !/salaam_cricket [NC]
+	RewriteCond %{REQUEST_URI} !/salmankhan [NC]
+	RewriteCond %{REQUEST_URI} !/saveyourleader [NC]
+	RewriteCond %{REQUEST_URI} !/shahrukhkhan [NC]
+	RewriteCond %{REQUEST_URI} !/teachers-day [NC]
+	RewriteCond %{REQUEST_URI} !/telangana-special [NC]
+	RewriteCond %{REQUEST_URI} !/tourismawards [NC]
+	RewriteCond %{REQUEST_URI} !/udaan [NC]
+	RewriteCond %{REQUEST_URI} !/uttarakhandfloods [NC]
+	RewriteCond %{REQUEST_URI} !/democraticnewsroom [NC]
+	####### start saticpages phase 2 End #########
 
   RewriteRule ^ index.php [L]
 
@@ -239,7 +305,7 @@ DirectoryIndex index.php index.html index.htm
   RewriteRule ^slideshows/(.*) /staticpages/slideshows/$1 [L]
   RewriteRule ^team-modi$ /staticpages/team-modi/index.html [L]
   RewriteRule ^100days/(.*) /staticpages/100days/$1 [L]
-  RewriteRule ^saveyourleader$ /staticpages/saveyourleader/result.jsp [L]
+  RewriteRule ^saveyourleader$ /staticpages/saveyourleader/index.html [L]
   RewriteRule ^saveyourleader/(.*) /staticpages/saveyourleader/$1 [L]
   RewriteRule ^mood-of-the-nation$ /staticpages/mood-of-the-nation/index.jsp [L]
   RewriteRule ^mood-of-the-nation/(.*) /staticpages/mood-of-the-nation/$1 [L]
@@ -355,7 +421,130 @@ DirectoryIndex index.php index.html index.htm
     RewriteRule ^itoday/20050926/(.*) /staticpages/itoday/20050926/$1 [L]
     RewriteRule ^itoday/20061113$ /staticpages/itoday/20061113/index.html? [L]
     RewriteRule ^itoday/20061113/(.*) /staticpages/itoday/20061113/$1 [L]
-
+	
+	####### start saticpages phase 2 #########
+	RewriteRule ^aap-arvind-kejriwal-winning-celebration$ /staticpages/aap-arvind-kejriwal-winning-celebration/index.html? [L]
+    RewriteRule ^aap-arvind-kejriwal-winning-celebration/(.*) /staticpages/aap-arvind-kejriwal-winning-celebration/$1 [L]
+	RewriteRule ^aishwaryarai$ /staticpages/aishwaryarai/index.html? [L]
+    RewriteRule ^aishwaryarai/(.*) /staticpages/aishwaryarai/$1 [L]
+	RewriteRule ^amitabh-bachchan-70th-birthday$ /staticpages/amitabh-bachchan-70th-birthday/index.html? [L]
+    RewriteRule ^amitabh-bachchan-70th-birthday/(.*) /staticpages/amitabh-bachchan-70th-birthday/$1 [L]
+	RewriteRule ^amitabh-bachchan-72nd-birthday$ /staticpages/amitabh-bachchan-72nd-birthday/index.html? [L]
+    RewriteRule ^amitabh-bachchan-72nd-birthday/(.*) /staticpages/amitabh-bachchan-72nd-birthday/$1 [L]
+	RewriteRule ^andhra$ /staticpages/andhra/telangana.jsp? [L]
+    RewriteRule ^andhra/(.*) /staticpages/andhra/$1 [L]
+	RewriteRule ^anna$ /staticpages/anna/index.html? [L]
+    RewriteRule ^anna/(.*) /staticpages/anna/$1 [L]
+	RewriteRule ^asiad2014$ /staticpages/asiad2014/index.html? [L]
+    RewriteRule ^asiad2014/(.*) /staticpages/asiad2014/$1 [L]
+	RewriteRule ^atoz-election$ /staticpages/atoz-election/index.html? [L]
+    RewriteRule ^atoz-election/(.*) /staticpages/atoz-election/$1 [L]
+	RewriteRule ^autoexpo/2016$ /staticpages/autoexpo/2016/index.html? [L]
+    RewriteRule ^autoexpo/2016/(.*) /staticpages/autoexpo/2016/$1 [L]
+	RewriteRule ^autoexpo/2014$ /staticpages/autoexpo/2014/index.html? [L]
+    RewriteRule ^autoexpo/2014/(.*) /staticpages/autoexpo/2014/$1 [L]
+	RewriteRule ^bob$ /staticpages/bob/index.html? [L]
+    RewriteRule ^bob/(.*) /staticpages/bob/$1 [L]
+	RewriteRule ^boi$ /staticpages/boi/index.html? [L]
+    RewriteRule ^boi/(.*) /staticpages/boi/$1 [L]
+	RewriteRule ^cannes2012$ /staticpages/cannes2012/index.html? [L]
+    RewriteRule ^cannes2012/(.*) /staticpages/cannes2012/$1 [L]
+	RewriteRule ^cannes2013$ /staticpages/cannes2013/index.html? [L]
+    RewriteRule ^cannes2013/(.*) /staticpages/cannes2013/$1 [L]
+	RewriteRule ^cards$ /staticpages/cards/index.html? [L]
+    RewriteRule ^cards/(.*) /staticpages/cards/$1 [L]
+	RewriteRule ^cricket-fest-6$ /staticpages/cricket-fest-6/index.html? [L]
+    RewriteRule ^cricket-fest-6/(.*) /staticpages/cricket-fest-6/$1 [L]
+	RewriteRule ^educationconclave2015$ /staticpages/educationconclave2015/index.html? [L]
+    RewriteRule ^educationconclave2015/(.*) /staticpages/educationconclave2015/$1 [L]
+	RewriteRule ^educationsummit$ /staticpages/educationsummit/index.html? [L]
+    RewriteRule ^educationsummit/(.*) /staticpages/educationsummit/$1 [L]
+	RewriteRule ^election-express$ /staticpages/election-express/index.html? [L]
+    RewriteRule ^election-express/(.*) /staticpages/election-express/$1 [L]
+	RewriteRule ^fashionweek$ /staticpages/fashionweek/index.html? [L]
+    RewriteRule ^fashionweek/(.*) /staticpages/fashionweek/$1 [L]
+	RewriteRule ^five-tax-sins$ /staticpages/five-tax-sins/index.html? [L]
+    RewriteRule ^five-tax-sins/(.*) /staticpages/five-tax-sins/$1 [L]
+	RewriteRule ^food-bill$ /staticpages/food-bill/index.html? [L]
+    RewriteRule ^food-bill/(.*) /staticpages/food-bill/$1 [L]
+	RewriteRule ^friends$ /staticpages/friends/index.html? [L]
+    RewriteRule ^friends/(.*) /staticpages/friends/$1 [L]
+	RewriteRule ^global-roundtable-beijing$ /staticpages/global-roundtable-beijing/index.html? [L]
+    RewriteRule ^global-roundtable-beijing/(.*) /staticpages/global-roundtable-beijing/$1 [L]
+	RewriteRule ^independence-inflation$ /staticpages/independence-inflation/index.html? [L]
+    RewriteRule ^independence-inflation/(.*) /staticpages/independence-inflation/$1 [L]
+	RewriteRule ^indian-search$ /staticpages/indian-search/index.html? [L]
+    RewriteRule ^indian-search/(.*) /staticpages/indian-search/$1 [L]
+	RewriteRule ^indiatodayatautoexpo$ /staticpages/indiatodayatautoexpo/index.html? [L]
+    RewriteRule ^indiatodayatautoexpo/(.*) /staticpages/indiatodayatautoexpo/$1 [L]
+	RewriteRule ^juvenile$ /staticpages/juvenile/index.html? [L]
+    RewriteRule ^juvenile/(.*) /staticpages/juvenile/$1 [L]
+	RewriteRule ^juvenilerapist$ /staticpages/juvenilerapist/index.html? [L]
+    RewriteRule ^juvenilerapist/(.*) /staticpages/juvenilerapist/$1 [L]
+	RewriteRule ^kalamwillliveon$ /staticpages/kalamwillliveon/index.html? [L]
+    RewriteRule ^kalamwillliveon/(.*) /staticpages/kalamwillliveon/$1 [L]
+	RewriteRule ^kejriwal$ /staticpages/kejriwal/index.html? [L]
+    RewriteRule ^kejriwal/(.*) /staticpages/kejriwal/$1 [L]
+	RewriteRule ^lie$ /staticpages/lie/index.html? [L]
+    RewriteRule ^lie/(.*) /staticpages/lie/$1 [L]
+	RewriteRule ^london-olympics-2012$ /staticpages/london-olympics-2012/index.html? [L]
+    RewriteRule ^london-olympics-2012/(.*) /staticpages/london-olympics-2012/$1 [L]
+	RewriteRule ^manmohan-economy$ /staticpages/manmohan-economy/index.html? [L]
+    RewriteRule ^manmohan-economy/(.*) /staticpages/manmohan-economy/$1 [L]
+	RewriteRule ^masala-world-cup$ /staticpages/masala-world-cup/index.html? [L]
+    RewriteRule ^masala-world-cup/(.*) /staticpages/masala-world-cup/$1 [L]
+	RewriteRule ^mms-same$ /staticpages/mms-same/index.html? [L]
+    RewriteRule ^mms-same/(.*) /staticpages/mms-same/$1 [L]
+	RewriteRule ^mms-speech$ /staticpages/mms-speech/index.html? [L]
+    RewriteRule ^mms-speech/(.*) /staticpages/mms-speech/$1 [L]
+	RewriteRule ^modi-navratnas$ /staticpages/modi-navratnas/index.html? [L]
+    RewriteRule ^modi-navratnas/(.*) /staticpages/modi-navratnas/$1 [L]
+	RewriteRule ^moily$ /staticpages/moily/index.html? [L]
+    RewriteRule ^moily/(.*) /staticpages/moily/$1 [L]
+	RewriteRule ^monsoontracker$ /staticpages/monsoontracker/index.html? [L]
+    RewriteRule ^monsoontracker/(.*) /staticpages/monsoontracker/$1 [L]
+	RewriteRule ^most-explosive-mamata-missiles$ /staticpages/most-explosive-mamata-missiles/index.html? [L]
+    RewriteRule ^most-explosive-mamata-missiles/(.*) /staticpages/most-explosive-mamata-missiles/$1 [L]
+	RewriteRule ^nokia$ /staticpages/nokia/index.html? [L]
+    RewriteRule ^nokia/(.*) /staticpages/nokia/$1 [L]
+	RewriteRule ^one-min-twictionary$ /staticpages/one-min-twictionary/index.html? [L]
+    RewriteRule ^one-min-twictionary/(.*) /staticpages/one-min-twictionary/$1 [L]
+	RewriteRule ^oscar-winners$ /staticpages/oscar-winners/index.html? [L]
+    RewriteRule ^oscar-winners/(.*) /staticpages/oscar-winners/$1 [L]
+	RewriteRule ^pledgewithCM$ /staticpages/pledgewithCM/index.html? [L]
+    RewriteRule ^pledgewithCM/(.*) /staticpages/pledgewithCM/$1 [L]
+	RewriteRule ^psu$ /staticpages/psu/index.html? [L]
+    RewriteRule ^psu/(.*) /staticpages/psu/$1 [L]
+	RewriteRule ^rajnikant$ /staticpages/rajnikant/index.html? [L]
+    RewriteRule ^rajnikant/(.*) /staticpages/rajnikant/$1 [L]
+	RewriteRule ^realestateawards$ /staticpages/realestateawards/index.html? [L]
+    RewriteRule ^realestateawards/(.*) /staticpages/realestateawards/$1 [L]
+	RewriteRule ^sachin-live-on-world-cup$ /staticpages/sachin-live-on-world-cup/index.html? [L]
+    RewriteRule ^sachin-live-on-world-cup/(.*) /staticpages/sachin-live-on-world-cup/$1 [L]
+	RewriteRule ^sachin-odi-gallery$ /staticpages/sachin-odi-gallery/index.html? [L]
+    RewriteRule ^sachin-odi-gallery/(.*) /staticpages/sachin-odi-gallery/$1 [L]
+	RewriteRule ^sachin2$ /staticpages/sachin2/index.html? [L]
+    RewriteRule ^sachin2/(.*) /staticpages/sachin2/$1 [L]
+	RewriteRule ^salaam_cricket$ /staticpages/salaam_cricket/index.html? [L]
+    RewriteRule ^salaam_cricket/(.*) /staticpages/salaam_cricket/$1 [L]
+	RewriteRule ^salmankhan$ /staticpages/salmankhan/index.html? [L]
+    RewriteRule ^salmankhan/(.*) /staticpages/salmankhan/$1 [L]
+	RewriteRule ^shahrukhkhan$ /staticpages/shahrukhkhan/index.html? [L]
+    RewriteRule ^shahrukhkhan/(.*) /staticpages/shahrukhkhan/$1 [L]
+	RewriteRule ^teachers-day$ /staticpages/teachers-day/index.html? [L]
+    RewriteRule ^teachers-day/(.*) /staticpages/teachers-day/$1 [L]
+	RewriteRule ^telangana-special$ /staticpages/telangana-special/index.html? [L]
+    RewriteRule ^telangana-special/(.*) /staticpages/telangana-special/$1 [L]
+	RewriteRule ^tourismawards$ /staticpages/tourismawards/index.html? [L]
+    RewriteRule ^tourismawards/(.*) /staticpages/tourismawards/$1 [L]
+	RewriteRule ^udaan$ /staticpages/udaan/index.html? [L]
+    RewriteRule ^udaan/(.*) /staticpages/udaan/$1 [L]
+	RewriteRule ^uttarakhandfloods$ /staticpages/uttarakhandfloods/index.html? [L]
+    RewriteRule ^uttarakhandfloods/(.*) /staticpages/uttarakhandfloods/$1 [L]
+	RewriteRule ^democraticnewsroom$ /staticpages/democraticnewsroom/index.html? [L]
+    RewriteRule ^democraticnewsroom/(.*) /staticpages/democraticnewsroom/$1 [L]
+	####### start saticpages phase 2 End #########
+	
 
   # Rules to correctly serve gzip compressed CSS and JS files.
   # Requires both mod_rewrite and mod_headers to be enabled.
